2017-08-04         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am: Update copyright year.

2017-06-27         Arnold D. Robbins     <arnold@skeeve.com>

	* Makfile.am (intdiv_la_LIBADD): Add LIBMPFR for Cygwin.
	Thanks to Eli Zaretskii for the tip that this is necessary.

2017-06-22         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* rwarray.c (read_value): Use malloc instead of calloc, since
	we immediately overwrite the buffer with data from the file.
	* rwarray0.c (read_value): Ditto.

2017-06-22         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* readfile.c (read_file_to_buffer): Use emalloc instead of ezalloc,
	since there's no need to initialize the memory to zero before 
	overwriting it with the file's contents.

2017-06-21         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* filefuncs.c (do_fts): Replace emalloc+memset with ezalloc.
	* readfile.c (read_file_to_buffer): Ditto.
	* rwarray.c (read_value): Replace gawk_malloc+memset with gawk_calloc.
	* gawkfts.c (fts_open): Replace malloc+memset with calloc.
	* rwarray0.c (read_value): Ditto.

2017-04-16         Arnold D. Robbins     <arnold@skeeve.com>

	* intdiv.c (func_table): Function is now named intdiv.

2017-04-14         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* intdiv.c (do_intdiv): On division by zero, return -1 and issue a
	warning instead of throwing a fatal error.

2017-04-13         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* intdiv.c (do_intdiv): On a division by zero fatal error, there's
	no need to clear the numerator and denominator and add a fake return.

2017-04-13         Arnold D. Robbins     <arnold@skeeve.com>

	* configure.ac: Alphabetize function list in AC_CHECK_FUNCS.
	* intdiv.c: Add descriptive comments to some functions.
	(do_intdiv): Make division by zero fatal in MPFR case.

2017-04-03         Arnold D. Robbins     <arnold@skeeve.com>
