@@ -1,3 +1,9 @@
+2017-08-10         Andrew J. Schorr     <aschorr@telemetry-investments.com>
+
+	* intdiv.c (init_intdiv): Remove function, since dl_load_func now
+	calls check_mpfr_version automatically.
+	(init_func): Initialize to NULL instead of init_intdiv.
+
 2017-08-04         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* Makefile.am: Update copyright year.
